--- a/index.html
+++ b/index.html
@@ -368,6 +368,10 @@
                                 <i class="fas fa-credit-card"></i>
                                 Facturación
                             </button>
+                            <button class="tab-btn" data-tab="api-config" id="apiConfigTab" style="display: none;">
+                                <i class="fas fa-cog"></i>
+                                Configuración API
+                            </button>
                         </div>
 
                         <div class="profile-content">
@@ -464,6 +468,65 @@
                                     <!-- Métodos de Pago -->
                                     <div id="paymentMethodsSection">
                                         <div class="loading-message">Cargando métodos de pago...</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- API Config Tab -->
+                            <div class="tab-content" id="api-config">
+                                <div class="api-config-container">
+                                    <div class="api-config-header">
+                                        <h3>
+                                            <i class="fas fa-cog"></i>
+                                            Configuración de API
+                                        </h3>
+                                        <p>Configura las credenciales de la API de Agente IA para el funcionamiento del sistema.</p>
+                                    </div>
+
+                                    <div class="api-config-form">
+                                        <form id="apiConfigForm">
+                                            <div class="form-group">
+                                                <label for="apiToken">
+                                                    <i class="fas fa-key"></i>
+                                                    Token API de Agente IA
+                                                </label>
+                                                <div class="input-group">
+                                                    <input 
+                                                        type="password" 
+                                                        id="apiToken" 
+                                                        name="apiToken" 
+                                                        class="form-input" 
+                                                        placeholder="Ingresa tu token de API"
+                                                        autocomplete="off"
+                                                    />
+                                                    <button type="button" class="btn btn-outline btn-sm" id="toggleTokenVisibility">
+                                                        <i class="fas fa-eye"></i>
+                                                    </button>
+                                                </div>
+                                                <small class="form-help">
+                                                    <i class="fas fa-info-circle"></i>
+                                                    Este token se utiliza para conectar con la API de Agente IA y es requerido para el funcionamiento del chatbot.
+                                                </small>
+                                            </div>
+
+                                            <div class="form-actions">
+                                                <button type="button" class="btn btn-outline" id="testApiConnection">
+                                                    <i class="fas fa-plug"></i>
+                                                    Probar Conexión
+                                                </button>
+                                                <button type="submit" class="btn btn-primary">
+                                                    <i class="fas fa-save"></i>
+                                                    Guardar Configuración
+                                                </button>
+                                            </div>
+                                        </form>
+
+                                        <div class="api-status" id="apiStatus" style="display: none;">
+                                            <div class="status-indicator">
+                                                <i class="fas fa-circle"></i>
+                                                <span class="status-text">Estado de la API</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
