--- a/index.html
+++ b/index.html
@@ -474,58 +474,44 @@
 
                             <!-- API Config Tab -->
                             <div class="tab-content" id="api-config">
-                                <div class="api-config-container">
-                                    <div class="api-config-header">
-                                        <h3>
-                                            <i class="fas fa-cog"></i>
-                                            Configuración de API
-                                        </h3>
-                                        <p>Configura las credenciales de la API de Agente IA para el funcionamiento del sistema.</p>
-                                    </div>
-
-                                    <div class="api-config-form">
-                                        <form id="apiConfigForm">
-                                            <div class="form-group">
-                                                <label for="apiToken">
-                                                    <i class="fas fa-key"></i>
-                                                    Token API de Agente IA
-                                                </label>
-                                                <div class="input-group">
-                                                    <input 
-                                                        type="password" 
-                                                        id="apiToken" 
-                                                        name="apiToken" 
-                                                        class="form-input" 
-                                                        placeholder="Ingresa tu token de API"
-                                                        autocomplete="off"
-                                                    />
-                                                    <button type="button" class="btn btn-outline btn-sm" id="toggleTokenVisibility">
-                                                        <i class="fas fa-eye"></i>
-                                                    </button>
-                                                </div>
-                                                <small class="form-help">
-                                                    <i class="fas fa-info-circle"></i>
-                                                    Este token se utiliza para conectar con la API de Agente IA y es requerido para el funcionamiento del chatbot.
-                                                </small>
-                                            </div>
-
-                                            <div class="form-actions">
-                                                <button type="button" class="btn btn-outline" id="testApiConnection">
-                                                    <i class="fas fa-plug"></i>
-                                                    Probar Conexión
-                                                </button>
-                                                <button type="submit" class="btn btn-primary">
-                                                    <i class="fas fa-save"></i>
-                                                    Guardar Configuración
+                                <div class="api-config-card">
+                                    <h3>Configuración de API</h3>
+                                    <form id="apiConfigForm" class="api-config-form">
+                                        <div class="form-group">
+                                            <label for="apiToken">Token API de Agente IA</label>
+                                            <div class="input-with-button">
+                                                <input 
+                                                    type="password" 
+                                                    id="apiToken" 
+                                                    name="apiToken" 
+                                                    placeholder="Ingresa tu token de API"
+                                                    autocomplete="off"
+                                                    required
+                                                />
+                                                <button type="button" class="btn btn-outline btn-sm" id="toggleTokenVisibility">
+                                                    <i class="fas fa-eye"></i>
                                                 </button>
                                             </div>
-                                        </form>
+                                            <small style="color: var(--text-muted); font-size: 0.75rem; margin-top: 0.25rem; display: block;">
+                                                <i class="fas fa-info-circle"></i> Este token se utiliza para conectar con la API de Agente IA
+                                            </small>
+                                        </div>
+                                        <div class="form-actions">
+                                            <button type="button" class="btn btn-outline" id="testApiConnection">
+                                                <i class="fas fa-plug"></i>
+                                                Probar Conexión
+                                            </button>
+                                            <button type="submit" class="btn btn-primary">
+                                                <i class="fas fa-save"></i>
+                                                Guardar Configuración
+                                            </button>
+                                        </div>
+                                    </form>
 
-                                        <div class="api-status" id="apiStatus" style="display: none;">
-                                            <div class="status-indicator">
-                                                <i class="fas fa-circle"></i>
-                                                <span class="status-text">Estado de la API</span>
-                                            </div>
+                                    <div class="api-status" id="apiStatus" style="display: none;">
+                                        <div class="status-indicator">
+                                            <i class="fas fa-circle"></i>
+                                            <span class="status-text">Estado de la API</span>
                                         </div>
                                     </div>
                                 </div>
