feat: Implementar función de cambio de contraseña y mejorar integración Stripe
- ✅ Agregar modal de cambio de contraseña con validaciones completas
- ✅ Conectar función de cambio de contraseña con Airtable
- ✅ Mejorar diseño del modal de verificación de identidad
- ✅ Optimizar integración de Stripe con datos reales de Airtable
- ✅ Corregir mapeo de stripe_customer_id en airtableService
- ✅ Mejorar manejo de errores y notificaciones
- ✅ Limpiar interfaz de configuración de API
- ✅ Agregar documentación y archivos de configuración
- ✅ Implementar scroll funcional en modal de notificaciones

--- a/index.html
+++ b/index.html
@@ -497,10 +497,6 @@
                                             </small>
                                         </div>
                                         <div class="form-actions">
-                                            <button type="button" class="btn btn-outline" id="testApiConnection">
-                                                <i class="fas fa-plug"></i>
-                                                Probar Conexión
-                                            </button>
                                             <button type="submit" class="btn btn-primary">
                                                 <i class="fas fa-save"></i>
                                                 Guardar Configuración
@@ -649,6 +645,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.min.js" onload="console.log('✅ Chart.js cargado correctamente')" onerror="console.error('❌ Error cargando Chart.js')"></script>
+    <script src="https://js.stripe.com/v3/" onload="console.log('✅ Stripe.js cargado correctamente')" onerror="console.error('❌ Error cargando Stripe.js')"></script>
     <script src="src/config/airtable.config.js"></script>
     <script src="src/services/airtableService.js"></script>
     <script src="src/auth/mockData.js"></script>
@@ -659,12 +656,18 @@
     <script src="src/services/notificationService.js"></script>
     <script src="src/services/pollingService.js"></script>
     <script src="src/dashboard.js"></script>
+    <script src="src/config/stripe.config.js"></script>
+    <script src="src/services/stripeService.js"></script>
+    <script src="src/billing.js"></script>
     <script src="src/auth/profile.js"></script>
     <script src="src/auth/userMenu.js"></script>
     <script src="src/improvements.js"></script>
     <script src="src/team.js"></script>
-    <script src="src/services/stripeService.js"></script>
-    <script src="src/billing.js"></script>
     <script src="src/main.js"></script>
+    
+    <!-- Script de prueba para desarrollo (remover en producción) -->
+    <script src="test-stripe-integration.js"></script>
+    <script src="debug-user-info.js"></script>
+    <script src="debug-airtable-fields.js"></script>
 </body>
 </html>
