feat(team): integrar Airtable para equipo real, eliminar mocks y campos del modal; fix(auth): persistencia de sesión en modo mock; ui: modal de invitación simplificado y espera para TeamManager; chore: sincronizar cambios y limpieza

--- a/login.html
+++ b/login.html
@@ -295,5 +295,12 @@
     <script src="src/auth/authService.js"></script>
     <script src="src/config/airtable.init.js"></script>
     <script src="src/auth/login.js"></script>
+    
+    <!-- Script de diagnóstico -->
+    <script src="diagnose-login.js"></script>
+    <script src="diagnose-login-issue.js"></script>
+    <script src="emergency-login.js"></script>
+    <script src="test-airtable.js"></script>
+    <script src="test-complete.js"></script>
 </body>
 </html>
