feat(auth): route guard para redirigir entre login y dashboard segun autenticacion

--- a/index.html
+++ b/index.html
@@ -676,6 +676,7 @@
     <!-- Autenticación -->
     <script src="src/auth/mockData.js"></script>
     <script src="src/auth/authService.js"></script>
+    <script src="src/auth/routeGuard.js"></script>
     <script src="src/auth/profile.js"></script>
     <script src="src/auth/userMenu.js"></script>
     
