--- a/login.html
+++ b/login.html
@@ -294,6 +294,7 @@
     <script src="src/auth/mockData.js"></script>
     <script src="src/auth/authService.js"></script>
     <script src="src/config/airtable.init.js"></script>
+    <script src="src/auth/routeGuard.js"></script>
     <script src="src/auth/login.js"></script>
     
     <!-- Script de diagnóstico -->
