--- a/index.html
+++ b/index.html
@@ -687,6 +687,9 @@
     <script src="src/improvements.js"></script>
     <script src="src/team.js"></script>
     <script src="src/main.js"></script>
+    
+    <!-- Scripts de prueba (solo en desarrollo) -->
+    <script src="test-billing-stripe.js"></script>
  
     
 </body>
