feat: agregar acceso directo al portal de facturación

--- a/index.html
+++ b/index.html
@@ -470,6 +470,28 @@
                                         <div class="loading-message">Cargando métodos de pago...</div>
                                     </div>
                                 </div>
+                                <div class="billing-card" style="margin-top: 1.5rem;">
+                                    <div class="card-header">
+                                        <h3>
+                                            <i class="fas fa-file-invoice-dollar"></i>
+                                            Mi Facturación
+                                        </h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <p style="margin-bottom: 1rem;">
+                                            Accede a tu portal de cliente en Stripe para consultar tus facturas, métodos de pago y estado de cuenta.
+                                        </p>
+                                        <a
+                                            href="https://billing.stripe.com/p/login/7sY4gzcpB2n8d8M3ZSgjC00"
+                                            target="_blank"
+                                            rel="noopener noreferrer"
+                                            class="btn btn-primary"
+                                        >
+                                            <i class="fas fa-external-link-alt"></i>
+                                            Ver Facturación
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
 
                             <!-- API Config Tab -->
