Fix: Mejorar persistencia de sesión entre recargas de página
- Sesión ahora siempre se guarda en localStorage para persistir entre recargas
- Aumentado tiempo de expiración: 30 días (recordarme) o 7 días (sin recordarme)
- Checkbox 'Recordarme' marcado por defecto en el formulario de login
- Mejorado timing de carga de datos de autenticación antes de verificar
- RouteGuard y main.js ahora esperan y cargan datos antes de redirigir
- Agregado logging mejorado para debugging de sesión
- La sesión ahora persiste correctamente al recargar la página

--- a/login.html
+++ b/login.html
@@ -271,7 +271,7 @@
 
             <div class="remember-forgot">
                 <label class="remember-me">
-                    <input type="checkbox" id="rememberMe" name="rememberMe">
+                    <input type="checkbox" id="rememberMe" name="rememberMe" checked>
                     Recordarme
                 </label>
                 <a href="#" class="forgot-password" onclick="showForgotPassword()">
