Fix: Mejorar logging y diagnóstico de sesión persistente
- Agregado logging detallado en loadAuthData y saveAuthData
- Mejorado timing en routeGuard (aumentado delay a 300ms)
- Agregado script de diagnóstico debug-session.js
- Verificación de guardado correcto en saveAuthData
- Re-carga de datos después de DOMContentLoaded
- Mejor logging para identificar problemas de sesión

--- a/index.html
+++ b/index.html
@@ -619,6 +619,7 @@
     <!-- Scripts de prueba (solo en desarrollo) -->
     <script src="test-billing-stripe.js"></script>
     <script src="debug-stripe-customer-id.js"></script>
+    <script src="debug-session.js"></script>
  
     
 </body>
