Feat: Mejorar botón de sincronizar con texto recordatorio y tamaño aumentado
- Agregado texto recordatorio a la izquierda del botón
- Botón de sincronizar 15% más grande para mejor visibilidad
- Texto: 'Recuerda darle al botón para sincronizar y actualizar los datos'
- Ajustes responsive: texto se oculta en móviles para ahorrar espacio

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                     <div class="section-header">
                         <h2>Resumen General</h2>
                         <div class="section-actions">
-                            <button class="btn btn-primary" id="syncDataBtn">
+                            <span class="sync-reminder-text">Recuerda darle al botón para sincronizar y actualizar los datos</span>
+                            <button class="btn btn-primary sync-btn-large" id="syncDataBtn">
                                 <i class="fas fa-sync"></i>
                                 Sincronizar
                             </button>
