feat: Agregar script de prueba para campos personalizados de GPTMaker
- Crear test-custom-fields.js para verificar campos personalizados disponibles
- Verificar estructura de chats y contactos
- Comparar campos necesarios vs existentes
- Agregar instrucciones detalladas para pruebas

--- a/index.html
+++ b/index.html
@@ -661,6 +661,7 @@
     <script src="test-billing-stripe.js"></script>
     <script src="debug-stripe-customer-id.js"></script>
     <script src="debug-session.js"></script>
+    <script src="test-custom-fields.js"></script>
  
     
 </body>
