feat: Crear script de prueba para contactos y campos personalizados
- Script para probar estructura de contactos en GPTMaker
- Investigar relación entre chats y contactos
- Probar endpoints para obtener/actualizar campos personalizados
- Usar campos existentes (Opción B) sin crear nuevos
- Instrucciones completas para ejecutar las pruebas

--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@
     <script src="debug-stripe-customer-id.js"></script>
     <script src="debug-session.js"></script>
     <script src="test-custom-fields.js"></script>
+    <script src="test-contact-custom-fields.js"></script>
  
     
 </body>
