--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@
     <script src="debug-session.js"></script>
     <script src="test-custom-fields.js"></script>
     <script src="test-contact-custom-fields.js"></script>
+    <script src="test-prospect-custom-fields.js"></script>
  
     
 </body>
