Aplicar estilo btn-primary con efecto de borde a ambos botones de prospectos (Sincronizar y Extraer Prospectos)

--- a/index.html
+++ b/index.html
@@ -515,11 +515,11 @@
                     <div class="section-header">
                         <h2>Prospectos</h2>
                         <div class="section-actions">
-                            <button class="btn btn-outline" id="refreshProspectsBtn">
+                            <button class="btn btn-primary" id="refreshProspectsBtn">
                                 <i class="fas fa-sync-alt"></i>
                                 Sincronizar
                             </button>
-                            <button class="btn btn-outline" id="extractProspectsBtn">
+                            <button class="btn btn-primary" id="extractProspectsBtn">
                                 <i class="fas fa-user-plus"></i>
                                 Extraer Prospectos
                             </button>
