--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                                 <i class="fas fa-sync-alt"></i>
                                 Sincronizar
                             </button>
-                            <button class="btn btn-primary" id="extractProspectsBtn">
+                            <button class="btn btn-primary extract-prospects-btn-large" id="extractProspectsBtn">
                                 <i class="fas fa-user-plus"></i>
                                 Extraer Prospectos
                             </button>
