feat: implementar emotional design con toggle opcional
- Agregar estilos emocionales para dashboard y login
- Implementar sistema de toggle (?newUI=1 o switch en UI)
- Mantener misma paleta de colores y tipografía
- Agregar microinteracciones y animaciones sutiles
- Mejorar feedback visual en todos los componentes
- Compatible con tema claro y oscuro
- No afecta funcionalidad existente

--- a/index.html
+++ b/index.html
@@ -674,6 +674,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.min.js" onload="console.log('✅ Chart.js cargado correctamente')" onerror="console.error('❌ Error cargando Chart.js')"></script>
     <script src="https://js.stripe.com/v3/" onload="console.log('✅ Stripe.js cargado correctamente')" onerror="console.error('❌ Error cargando Stripe.js')"></script>
     
+    <!-- Emotional Design Toggle (debe cargarse temprano) -->
+    <script src="src/emotional-design-toggle.js"></script>
+    
     <!-- Configuración -->
     <script src="src/config/gptmaker.config.js"></script>
     <script src="src/config/airtable.config.js"></script>
