--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.min.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- Emotional Design Styles (cargado condicionalmente) -->
+    <link rel="stylesheet" href="styles-emotional.css" id="emotional-design-styles" media="none" onload="if(document.body.getAttribute('data-emotional-design') === 'true') this.media='all'">
 </head>
 <body>
     <div class="dashboard-container">
